--- a/block-buster.cabal
+++ b/block-buster.cabal
@@ -50,11 +50,15 @@ library
   import:          lang
   hs-source-dirs:  src
   build-depends:
+    , async
     , base                  >=4.9 && <5
     , cardano-api
     , cardano-ledger-byron
+    , unagi-chan
 
-  exposed-modules: BlockBuster.ChainSync
+  exposed-modules:
+    BlockBuster.ChainSync
+    BlockBuster.Producer
 
 executable example
   import:         lang
